[B]Version v0.4.2[/B]
- Fixed Dailymotion links.
- Increased YouTube Playlist limit to 50 video songs (MAX).

[B]Version v0.4.1[/B]
- Updated to newer version of TurtleX.

[B]Version v0.4.0[/B]
- Updated to newer version of TurtleX to support valid_url functionality of URLResolver.

[B]Version v0.3.8 - v0.3.9[/B]
- Added Google Analytics parameters.

[B]Version v0.3.7[/B]
- Added support to play Audio Streams.

[B]Version v0.3.6[/B]
- Error handling.

[B]Version v0.3.5[/B]
- YouTube video URL with embedded feature fixed.

[B]Version v0.3.4[/B]
- Making compatible with new Turtle version Google Analytics.

[B]Version v0.3.3[/B]
- Handled google shortened URL.

[B]Version v0.3.2[/B]
- Handled HttpError occurs when incorrect URL passed.

[B]Version v0.3.1[/B]
- Marked as stable version.

[B]Version v0.2.3[/B]
- Updated turtle lib version to 1.4.7 for immediate fixes.

[B]Version v0.2.2[/B]
- Added new setting to select type of playback when new request is pushed.
- Fixing YouTube Standard quality video.

[B]Version v0.2.1[/B]
- Updated turtle version to 1.4.2.

[B]Version v0.2.0[/B]
- Added Zappy's Glass service.
- Added support to play direct media links.

[B]Version v0.1.9[/B]
- Updated turtle version to 1.4.0.

[B]Version v0.1.8[/B]
- Moved to new directory structure.

[B]Version 0.1.6[/B]
- Forgot to add addon Id in initialization. Stupid mistake fixed.

[B]Version 0.1.5[/B]
- Added new turtle lib dependency.

[B]Version 0.1.1[/B]
- YouTube video streaming fixed. Turtle module extracted.

[B]Version 0.0.6 - 0.0.9[/B]
- Added new video snappers.

[B]Version 0.0.5[/B]
- Made TurtleService more generic.

[B]Version 0.0.4[/B]
- Playlist will only be cleared if at least one video item is found

[B]Version 0.0.3[/B]
- Added Playlist support and added a check to handle situation when XBMC player is already playing a video

[B]Version 0.0.2[/B]
- Refined parsing of YouTube HD streaming

[B]Version 0.0.1[/B]
- beta version